[gd_scene load_steps=39 format=3 uid="uid://dx14ct6svha6x"]

[ext_resource type="Script" uid="uid://3nb2wfn13aw7" path="res://Scenes/test_lab.gd" id="1_ke7eq"]
[ext_resource type="Texture2D" uid="uid://cqg8wkx70yin" path="res://Assets/testab/back.png" id="1_wr84n"]
[ext_resource type="Script" uid="uid://c1x8tjd2ts6cw" path="res://Scripts/camera_manager.gd" id="2_gvm2h"]
[ext_resource type="Texture2D" uid="uid://casv85r8o04v6" path="res://Assets/testab/back2.png" id="2_ke7eq"]
[ext_resource type="Texture2D" uid="uid://vtte7xaajig0" path="res://Assets/testab/mid.png" id="3_qmjw8"]
[ext_resource type="Script" uid="uid://dmk4w3w5ypuvx" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="3_trgpy"]
[ext_resource type="Script" uid="uid://42jdkjn6i73p" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_6v7ky"]
[ext_resource type="Texture2D" uid="uid://dnnh5m1hfjeyu" path="res://Assets/testab/mid2.png" id="4_f1avi"]
[ext_resource type="Texture2D" uid="uid://d2bx5yhn6wxft" path="res://icon.svg" id="5_gvm2h"]
[ext_resource type="Texture2D" uid="uid://k5dwdvcsk3w" path="res://Assets/testab/bashdoor.png" id="6_trgpy"]
[ext_resource type="Texture2D" uid="uid://svc4t5r3olie" path="res://Assets/testab/pikedoor.png" id="7_6v7ky"]
[ext_resource type="PackedScene" uid="uid://dqm8to35jixto" path="res://Scenes/Player/player.tscn" id="8_eqt2k"]
[ext_resource type="Texture2D" uid="uid://d4mpu6q0csjhw" path="res://Assets/testab/front.png" id="9_re7ae"]
[ext_resource type="Texture2D" uid="uid://dgp7o6ddq7xhp" path="res://Assets/testab/front2.png" id="10_gjwjr"]
[ext_resource type="Texture2D" uid="uid://r5qjdae5i8gp" path="res://Assets/testab/bash.png" id="11_g7qjo"]
[ext_resource type="PackedScene" uid="uid://c3ooblhag1px8" path="res://Scenes/Entities/test_enemy.tscn" id="12_trgpy"]
[ext_resource type="Texture2D" uid="uid://tqe2pwea76b8" path="res://Assets/testab/volt.png" id="12_viuty"]
[ext_resource type="Texture2D" uid="uid://befe8ookfq2te" path="res://Assets/testab/jab.png" id="13_uuj2u"]
[ext_resource type="Texture2D" uid="uid://b6epjvkcnplun" path="res://Assets/testab/pike.png" id="14_8d7xq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqt2k"]
size = Vector2(1522, 753)

[sub_resource type="Resource" id="Resource_re7ae"]
script = ExtResource("4_6v7ky")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjwjr"]
size = Vector2(1478, 759)

[sub_resource type="Resource" id="Resource_g7qjo"]
script = ExtResource("4_6v7ky")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viuty"]
size = Vector2(1422, 715)

[sub_resource type="Resource" id="Resource_uuj2u"]
script = ExtResource("4_6v7ky")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8d7xq"]
size = Vector2(2921, 801)

[sub_resource type="Resource" id="Resource_8e8hc"]
script = ExtResource("4_6v7ky")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8e8hc"]
size = Vector2(60, 262.667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhppx"]
size = Vector2(350.667, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke7eq"]
size = Vector2(82.6669, 263.333)

[sub_resource type="CircleShape2D" id="CircleShape2D_qmjw8"]
radius = 74.4312

[sub_resource type="CircleShape2D" id="CircleShape2D_ke7eq"]
radius = 72.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gvm2h"]
radius = 95.0842

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8xxt"]
size = Vector2(155.25, 253.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekxgy"]
size = Vector2(246.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gfer"]
size = Vector2(166.667, 41.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxh54"]
size = Vector2(72, 30.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgsvo"]
size = Vector2(157, 36.6667)

[node name="TestLab" type="Node2D"]
script = ExtResource("1_ke7eq")

[node name="Camera_Manager" type="Node" parent="." node_paths=PackedStringArray("player", "Camera_Zone0", "Camera_Zone1", "Camera_Zone2", "Camera_Zone3")]
script = ExtResource("2_gvm2h")
player = NodePath("../Player")
Camera_Zone0 = NodePath("Cameras/zone0/PhantomCamera2D")
Camera_Zone1 = NodePath("Cameras/zone1/PhantomCamera2D")
Camera_Zone2 = NodePath("Cameras/zone2/PhantomCamera2D")
Camera_Zone3 = NodePath("Cameras/zone3/PhantomCamera2D")
metadata/_custom_type_script = "uid://c1x8tjd2ts6cw"

[node name="Cameras" type="StaticBody2D" parent="Camera_Manager"]

[node name="zone0" type="Area2D" parent="Camera_Manager/Cameras"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera_Manager/Cameras/zone0"]
position = Vector2(754, 503)
shape = SubResource("RectangleShape2D_eqt2k")

[node name="PhantomCamera2D" type="Node2D" parent="Camera_Manager/Cameras/zone0"]
position = Vector2(787, 488)
script = ExtResource("3_trgpy")
zoom = Vector2(0.9, 1)
tween_resource = SubResource("Resource_re7ae")
draw_limits = true
metadata/_custom_type_script = "uid://dmk4w3w5ypuvx"

[node name="zone1" type="Area2D" parent="Camera_Manager/Cameras"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera_Manager/Cameras/zone1"]
position = Vector2(2280, 501.5)
shape = SubResource("RectangleShape2D_gjwjr")

[node name="PhantomCamera2D" type="Node2D" parent="Camera_Manager/Cameras/zone1"]
position = Vector2(2265, 528)
script = ExtResource("3_trgpy")
zoom = Vector2(0.9, 1)
tween_resource = SubResource("Resource_g7qjo")
draw_limits = true
metadata/_custom_type_script = "uid://dmk4w3w5ypuvx"

[node name="zone2" type="Area2D" parent="Camera_Manager/Cameras"]
position = Vector2(3680, 456)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera_Manager/Cameras/zone2"]
position = Vector2(74, 57.5)
shape = SubResource("RectangleShape2D_viuty")

[node name="PhantomCamera2D" type="Node2D" parent="Camera_Manager/Cameras/zone2"]
position = Vector2(42, 69)
script = ExtResource("3_trgpy")
zoom = Vector2(0.9, 1)
tween_resource = SubResource("Resource_uuj2u")
draw_limits = true
metadata/_custom_type_script = "uid://dmk4w3w5ypuvx"

[node name="zone3" type="Area2D" parent="Camera_Manager/Cameras"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera_Manager/Cameras/zone3"]
position = Vector2(5957.5, 542.5)
shape = SubResource("RectangleShape2D_8d7xq")

[node name="PhantomCamera2D" type="Node2D" parent="Camera_Manager/Cameras/zone3" node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(432, 814)
script = ExtResource("3_trgpy")
follow_mode = 2
follow_target = NodePath("../../../../Player")
zoom = Vector2(0.8, 0.8)
tween_resource = SubResource("Resource_8e8hc")
draw_limits = true
metadata/_custom_type_script = "uid://dmk4w3w5ypuvx"

[node name="back" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="Back" type="Sprite2D" parent="back"]
position = Vector2(2536, 361)
texture = ExtResource("1_wr84n")

[node name="Back2" type="Sprite2D" parent="back"]
position = Vector2(7159, 590)
texture = ExtResource("2_ke7eq")

[node name="mid" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="Mid" type="Sprite2D" parent="mid"]
position = Vector2(2524, 358)
texture = ExtResource("3_qmjw8")

[node name="Mid2" type="Sprite2D" parent="mid"]
position = Vector2(7168, 591)
texture = ExtResource("4_f1avi")

[node name="Icon2" type="Sprite2D" parent="mid"]
position = Vector2(8626, 1011)
scale = Vector2(0.554688, 0.554688)
texture = ExtResource("5_gvm2h")

[node name="Icon" type="Sprite2D" parent="mid"]
position = Vector2(8428, 988)
texture = ExtResource("5_gvm2h")

[node name="bashdoor" type="StaticBody2D" parent="mid"]
position = Vector2(2897, 461)
collision_mask = 3

[node name="Bashdoor" type="Sprite2D" parent="mid/bashdoor"]
texture = ExtResource("6_trgpy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mid/bashdoor"]
position = Vector2(5, -43.6667)
shape = SubResource("RectangleShape2D_8e8hc")

[node name="pikedoor" type="StaticBody2D" parent="mid"]
position = Vector2(7466, 512)
collision_mask = 3

[node name="Pikedoor" type="Sprite2D" parent="mid/pikedoor"]
texture = ExtResource("7_6v7ky")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mid/pikedoor"]
position = Vector2(1.3335, 12)
shape = SubResource("RectangleShape2D_rhppx")

[node name="bashdoor_check" type="Area2D" parent="mid"]
position = Vector2(2892, 478.667)
collision_mask = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="mid/bashdoor_check"]
position = Vector2(-0.666504, -61)
shape = SubResource("RectangleShape2D_ke7eq")

[node name="Pwca" parent="." instance=ExtResource("12_trgpy")]
position = Vector2(5695, 584)
scale = Vector2(0.25, 0.25)

[node name="Player" parent="." instance=ExtResource("8_eqt2k")]
position = Vector2(432, 814)
scale = Vector2(0.5, 0.5)

[node name="front" type="Node2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="Front" type="Sprite2D" parent="front"]
position = Vector2(2525, 362)
texture = ExtResource("9_re7ae")

[node name="Front2" type="Sprite2D" parent="front"]
position = Vector2(7164, 591)
texture = ExtResource("10_gjwjr")

[node name="Bash_unlock" type="Area2D" parent="."]
position = Vector2(3705, 666)
collision_mask = 3

[node name="Bash" type="Sprite2D" parent="Bash_unlock"]
texture = ExtResource("11_g7qjo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bash_unlock"]
shape = SubResource("CircleShape2D_qmjw8")

[node name="vault_unlock" type="Area2D" parent="."]
collision_mask = 3

[node name="Volt" type="Sprite2D" parent="vault_unlock"]
position = Vector2(5362, 638)
texture = ExtResource("12_viuty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vault_unlock"]
position = Vector2(5360, 640)
shape = SubResource("CircleShape2D_ke7eq")

[node name="jab_unlock" type="Area2D" parent="."]
position = Vector2(8093, 630)

[node name="Jab" type="Sprite2D" parent="jab_unlock"]
texture = ExtResource("13_uuj2u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="jab_unlock"]
shape = SubResource("CircleShape2D_gvm2h")

[node name="Pike" type="Sprite2D" parent="."]
position = Vector2(10638, 583)
texture = ExtResource("14_8d7xq")

[node name="collisions" type="StaticBody2D" parent="."]
position = Vector2(11656, 28)
scale = Vector2(1.5, 1.5)
collision_mask = 67

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(1, 2, -59, 28, -7652, 94, -7651, 522, -5406, 526, -5382, 493, -5211, 493, -5184, 530, -4282, 520, -4280, 480, -3706, 480, -3701, 612, -3269, 616, -3270, 480, -2478, 488, -2462, 464, -2255, 462, -2234, 485, -462, 475, -474, 507, -479, 615, -823, 622, -872, 702, -866, 1053, 1489, 1037, 1494, 622, 53, 619, 52, 840, -46, 873, -38, 690, -119, 613, -155, 472, -44, 469, -41, 456, -39, 435, -38, 84, 8, 34, 80, 115, 121, 466, 1663, 503, 1650, 1213, -1174, 1192, -1136, 595, -2889, 624, -3140, 699, -3779, 695, -3900, 649, -7783, 658, -7745, -36, -4893.79, -38.9879, -111, -44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions"]
visible = false
position = Vector2(-5769.63, 419.25)
shape = SubResource("RectangleShape2D_f8xxt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collisions"]
visible = false
position = Vector2(-5769.25, 280)
shape = SubResource("RectangleShape2D_ekxgy")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="collisions"]
visible = false
position = Vector2(-6058, 296)
shape = SubResource("RectangleShape2D_1gfer")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="collisions"]
visible = false
position = Vector2(-6342, 390)
shape = SubResource("RectangleShape2D_vxh54")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="collisions"]
visible = false
position = Vector2(-6222.67, 355.333)
shape = SubResource("RectangleShape2D_vxh54")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="collisions"]
visible = false
position = Vector2(-6482.5, 462.333)
shape = SubResource("RectangleShape2D_pgsvo")
one_way_collision = true
one_way_collision_margin = 5.7

[connection signal="body_entered" from="Camera_Manager/Cameras/zone0" to="Camera_Manager" method="_on_zone_0_body_entered"]
[connection signal="body_entered" from="Camera_Manager/Cameras/zone1" to="Camera_Manager" method="_on_zone_1_body_entered"]
[connection signal="body_entered" from="Camera_Manager/Cameras/zone2" to="Camera_Manager" method="_on_zone_2_body_entered"]
[connection signal="body_entered" from="Camera_Manager/Cameras/zone3" to="Camera_Manager" method="_on_zone_3_body_entered"]
[connection signal="area_entered" from="mid/bashdoor_check" to="." method="_on_bashdoor_check_area_entered"]
[connection signal="body_entered" from="mid/bashdoor_check" to="." method="_on_bashdoor_check_body_entered"]
[connection signal="body_exited" from="mid/bashdoor_check" to="." method="_on_bashdoor_check_body_exited"]
[connection signal="body_entered" from="Bash_unlock" to="." method="_on_bash_unlock_body_entered"]
[connection signal="body_entered" from="vault_unlock" to="." method="_on_vault_unlock_body_entered"]
[connection signal="body_entered" from="jab_unlock" to="." method="_on_jab_unlock_body_entered"]
